--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,7 @@ $mainColor: white;
 $bgColor: orange;
 $colorTittle: rgb(6, 173, 6);
 $fontTittle: Serif;
-$fontP: Arial; 
+$fontP: Arial;
 
 body {
     display: flex;
@@ -36,7 +36,7 @@ body {
     hr {
         margin: 0.1%;
         padding: 0.1%;
-        color:$mainColor;
+        color: $mainColor;
     }
 }
 
@@ -48,7 +48,8 @@ body {
         width: 40%;
         padding-bottom: 0.1%;
     }
-    h2, h5{
+    h2,
+    h5 {
         background-color: $bgColor;
     }
 }
@@ -78,7 +79,7 @@ body {
     margin-bottom: 1%;
     padding-top: 0.5%;
     padding-bottom: 0.5%;
-    p{
+    p {
         padding: 0.1%;
         margin-bottom: 0;
         display: flex;
@@ -90,9 +91,9 @@ body {
 //Cartões dinâmicos//
 .card {
     background-color: $colorTittle;
-    width: 100%; 
-    height: 12rem; 
-    border: 0px; 
+    width: 100%;
+    height: 12rem;
+    border: 0px;
     margin: 0px;
     padding: 0.01%;
 }
@@ -102,32 +103,32 @@ body {
     background-image: linear-gradient(160deg, #26d82f 0%, #97f77f 50%);
 }
 
-    .card-side {
-        height: 13rem;
-        border-radius: 8px;
-        transition: all 0.9s ease;
-        backface-visibility: hidden;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding: 2px;
-        color: $colorTittle;
-    }
-    .card-side.back {
-        transform: rotateY(-180deg);
-        background-color: $bgColor;
-        background-image: linear-gradient(43deg, #f8db57 0%, #f7ce78 46%, #ffba5f 100%);
-    }
-    .card-side.front {
-        background-color: $bgColor;
-        background-image: linear-gradient(160deg, #26d82f 0%, #97f77f 50%);
-    }
-    .card:hover .card-side.front {
-        transform: rotateY(180deg);
-    }
-    .card:hover .card-side.back {
-        transform: rotateY(0deg);
-    }
+.card-side {
+    height: 13rem;
+    border-radius: 8px;
+    transition: all 0.9s ease;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2px;
+    color: $colorTittle;
+}
+.card-side.back {
+    transform: rotateY(-180deg);
+    background-color: $bgColor;
+    background-image: linear-gradient(43deg, #f8db57 0%, #f7ce78 46%, #ffba5f 100%);
+}
+.card-side.front {
+    background-color: $bgColor;
+    background-image: linear-gradient(160deg, #26d82f 0%, #97f77f 50%);
+}
+.card:hover .card-side.front {
+    transform: rotateY(180deg);
+}
+.card:hover .card-side.back {
+    transform: rotateY(0deg);
+}
 
 //Fim dos cartões//
