--- a/css/main.scss
+++ b/css/main.scss
@@ -131,4 +131,28 @@ body {
     transform: rotateY(0deg);
 }
 
+#title {
+    
+    position: relative;
+
+    &::after {
+        display: flex;
+        flex-wrap: wrap;
+        content: attr(tooltip);
+        font-size: medium;
+        font-family: Arial, Helvetica, sans-serif;
+        position: absolute;
+        background-color: green;
+        color: white;
+        border-radius: 0.5em;
+        padding: 0.4em;
+        transform: scale(0);
+        transition: transform 200ms ease-in;
+    }
+    
+    &:hover::after {
+        transform: scale(1);
+    }
+}
+
 //Fim dos cartões//
